--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,9 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
         <archiveClasses>true</archiveClasses>
+        <failOnMissingWebXml>false</failOnMissingWebXml> <!-- REQUIRED -->
+        <appengine.maven.plugin>2.2.0</appengine.maven.plugin>
+        <jetty>9.4.28.v20200408</jetty>
     </properties>
 
     <prerequisites>
@@ -101,6 +104,13 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty}</version>
+            </plugin>
+
 
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
